Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7221

replay-ost-single test_3: ASSERTION( __v > 0 && __v < ((int)0x5a5a5a5a5a5a5a5a) ) failed: value: 0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for wangdi <di.wang@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/6824daa8-65d5-11e5-8d98-5254006e85c2.

      The sub-test test_3 failed with the following error:

      07:42:45:Lustre: DEBUG MARKER: == replay-ost-single test 3: Fail OST during write, with verification == 00:42:38 (1443426158)
      07:42:45:Lustre: DEBUG MARKER: grep -c /mnt/ost1' ' /proc/mounts
      07:42:45:Lustre: DEBUG MARKER: umount -d /mnt/ost1
      07:42:45:Lustre: Failing over lustre-OST0000
      07:42:45:Lustre: lustre-OST0000: Not available for connect from 10.2.4.116@tcp (stopping)
      07:42:45:LustreError: 28990:0:(genops.c:815:class_export_put()) ASSERTION( __v > 0 && __v < ((int)0x5a5a5a5a5a5a5a5a) ) failed: value: 0
      07:42:45:LustreError: 28990:0:(genops.c:815:class_export_put()) LBUG
      07:42:45:Pid: 28990, comm: ll_ost00_014
      07:42:45:
      07:42:45:Call Trace:
      07:42:45: [<ffffffffa04a6875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      07:42:45: [<ffffffffa04a6e77>] lbug_with_loc+0x47/0xb0 [libcfs]
      07:42:45: [<ffffffffa05c98b1>] class_export_put+0x271/0x310 [obdclass]
      07:42:45: [<ffffffffa05c9aa0>] obd_stale_export_put+0x150/0x290 [obdclass]
      07:42:45: [<ffffffffa05c9d01>] class_unlink_export+0x121/0x130 [obdclass]
      07:42:45: [<ffffffffa05e4a90>] class_decref+0x350/0x4d0 [obdclass]
      07:42:45: [<ffffffffa04b2b61>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      07:42:45: [<ffffffffa0531efc>] ? libcfs_nid2str_r+0x11c/0x140 [lnet]
      07:42:45: [<ffffffffa07ea6ad>] target_handle_connect+0x23d/0x2bb0 [ptlrpc]
      07:42:45: [<ffffffffa04b2523>] ? libcfs_debug_vmsg2+0x5e3/0xbe0 [libcfs]
      07:42:46: [<ffffffffa08907d2>] tgt_request_handle+0x5a2/0x12e0 [ptlrpc]
      07:42:46: [<ffffffffa0838731>] ptlrpc_main+0xe41/0x1910 [ptlrpc]
      07:42:46: [<ffffffffa08378f0>] ? ptlrpc_main+0x0/0x1910 [ptlrpc]
      07:42:46: [<ffffffff810a101e>] kthread+0x9e/0xc0
      07:42:46: [<ffffffff8100c28a>] child_rip+0xa/0x20
      07:42:46: [<ffffffff810a0f80>] ? kthread+0x0/0xc0
      07:42:46: [<ffffffff8100c280>] ? child_rip+0x0/0x20
      07:42:46:
      07:42:46:Kernel panic - not syncing: LBUG
      07:42:46:Pid: 28990, comm: ll_ost00_014 Not tainted 2.6.32-573.3.1.el6_lustre.g00880a0.x86_64 #1
      07:42:46:Call Trace:
      07:42:46: [<ffffffff815384e4>] ? panic+0xa7/0x16f
      07:42:47: [<ffffffffa04a6ecb>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
      07:42:47: [<ffffffffa05c98b1>] ? class_export_put+0x271/0x310 [obdclass]
      07:42:47: [<ffffffffa05c9aa0>] ? obd_stale_export_put+0x150/0x290 [obdclass]
      07:42:47: [<ffffffffa05c9d01>] ? class_unlink_export+0x121/0x130 [obdclass]
      07:42:47: [<ffffffffa05e4a90>] ? class_decref+0x350/0x4d0 [obdclass]
      07:42:47: [<ffffffffa04b2b61>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      07:42:47: [<ffffffffa0531efc>] ? libcfs_nid2str_r+0x11c/0x140 [lnet]
      07:42:47: [<ffffffffa07ea6ad>] ? target_handle_connect+0x23d/0x2bb0 [ptlrpc]
      07:42:47: [<ffffffffa04b2523>] ? libcfs_debug_vmsg2+0x5e3/0xbe0 [libcfs]
      07:42:47: [<ffffffffa08907d2>] ? tgt_request_handle+0x5a2/0x12e0 [ptlrpc]
      07:42:47: [<ffffffffa0838731>] ? ptlrpc_main+0xe41/0x1910 [ptlrpc]
      07:42:47: [<ffffffffa08378f0>] ? ptlrpc_main+0x0/0x1910 [ptlrpc]
      07:42:47: [<ffffffff810a101e>] ? kthread+0x9e/0xc0
      07:42:47: [<ffffffff8100c28a>] ? child_rip+0xa/0x20
      07:42:47: [<ffffffff810a0f80>] ? kthread+0x0/0xc0
      07:42:47: [<ffffffff8100c280>] ? child_rip+0x0/0x20
      test failed to respond and timed out
      

            bfaccini Bruno Faccini (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: